Added controls in the config for: uniform vs earthlike land-ocean fraction Obliquity of the planet

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -1,6 +1,6 @@
 [PDE]
 # solve in latitude (lat) or sin(latitude) (x)
-solver = "lat"
+solver = lat
 # number of spatial nodes
 spacedim = 60
 # Simulation time length, years
@@ -23,6 +23,13 @@ c = 1
 m = 28
 # Rotational frequency, days^-1
 Omega = 1
+# land fraction type
+# earthlike - earth like land and ocean fractions
+# uniform:float - a uniform distribution of size 0 <= float <= 1
+; land_frac_type = earthlike
+land_frac_type = uniform:0.7
+# Obliquity, deg, 0 <= δ <= 180
+obliquity = 23.5
 
 [ORBIT]
 # Semimajoraxis, AU
@@ -33,4 +40,4 @@ e = 0
 [FILEMANAGEMENT]
 save = True
 # autogen if ""
-save_name = ""
+save_name = InLat_3
