colour plots and default values

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -5,7 +5,7 @@ solver = lat
 spacedim = 60
 # Simulation time length, years
 # usual relaxation time is ~100yrs
-time = 150
+time = 100
 # timestep, days
 # usually 1 day < dt < 3 days
 timestep = 1
@@ -35,9 +35,9 @@ obliquity = 23.5
 # Semimajoraxis, AU
 a = 1
 # Eccentricity, 0 <= e < 1
-e = 0
+e = 0.0
 
 [FILEMANAGEMENT]
 save = True
 # autogen if ""
-save_name = InLat_3
+save_name = InLat_e0
