start_temp -> starttemp

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -10,7 +10,7 @@ time = 100
 # usually 1 day < dt < 3 days
 timestep = 1
 # Uniform starting temperature, K
-start_temp = 350
+starttemp = 350
 
 [PLANET]
 # Diffusion constant, J s^-1 m^-2 K^-1
