land_frac_type -> landfractype

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -26,8 +26,8 @@ Omega = 1
 # land fraction type
 # earthlike - earth like land and ocean fractions
 # uniform:float - a uniform distribution of size 0 <= float <= 1
-; land_frac_type = earthlike
-land_frac_type = uniform:0.7
+; landfractype = earthlike
+landfractype = uniform:0.7
 # Obliquity, deg, 0 <= δ <= 180
 obliquity = 23.5
 
