--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -1,6 +1,4 @@
 [PDE]
-# solve in latitude (lat) or sin(latitude) (x)
-solver = lat
 # number of spatial nodes
 spacedim = 60
 # Simulation time length, years
@@ -14,7 +12,8 @@ starttemp = 350
 
 [PLANET]
 # Diffusion constant, J s^-1 m^-2 K^-1
-D_0 = 0.58
+; D_0 = 0.58
+D_0 = 0.56
 # atmospheric pressure, kPa
 p = 101
 # heat capacity, 10^3 g^-1 K^-1
@@ -31,15 +30,33 @@ landfractype = uniform:0.7
 # Obliquity, deg, 0 <= δ <= 180
 obliquity = 23.5
 
+
 [ORBIT]
-# Semimajoraxis, AU
-a = 1
-# Eccentricity, 0 <= e < 1
-e = 0.0
+# relative to Sun
+starmass = 1
+starradius = 1
+
+# relative to Jupiter
+gasgiantmass = 1
+gasgiantradius = 1
+gassemimajoraxis = 1
+gasgianteccentricity = 0.05
+
+# relative to earth's moon
+moonmass = 81.3
+moonradius = 3.67
+moonsemimajoraxis = 0.01
+mooneccentricity = 0.001
+
+[TIDALHEATING]
+# x2e10 N m^-2
+shearmod = 1
+Q = 100
+gasalbedo = 0.34
 
 [FILEMANAGEMENT]
 save = True
 # autogen if ""
-save_name = InLat_e0
+save_name = omega
 
 plot = True
