--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -40,7 +40,7 @@ starradius = 1
 gasgiantmass = 1
 gasgiantradius = 1
 gassemimajoraxis = 1
-gasgianteccentricity = 0.05
+gaseccentricity = 0.05
 
 # relative to earth's moon
 moonmass = 81.3
