moon mass -> moon density extra units for gasgiant mass, moondensity and moonradius parallel processing for single and dual convergence extra plotting control

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -43,8 +43,8 @@ gassemimajoraxis = 1
 gaseccentricity = 0.05
 
 # relative to earth's moon
-moonmass = 81.3
 moonradius = 3.67
+moondensity = 3500
 moonsemimajoraxis = 0.01
 mooneccentricity = 0.001
 
