climate model split into climate_model_planet and climate_model_moon planet is the standard unchanged model moon is the tidal heating/eclipsing/reflectance changes new option in config to choose between the two as well as caller which interprets which you want to run from this option convergence changed accordingly convergence also changed to use generalised plot functions

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -1,4 +1,7 @@
 [PDE]
+# Type of simulation to be run
+type = planet
+; type = moon
 # number of spatial nodes
 spacedim = 61
 # Simulation time length, years
