split landfractype into the type and the fraction if uniform

--- a/DEFAULT.ini
+++ b/DEFAULT.ini
@@ -29,7 +29,9 @@ Omega = 1
 # earthlike - earth like land and ocean fractions
 # uniform:float - a uniform distribution of size 0 <= float <= 1
 ; landfractype = earthlike
-landfractype = uniform:0.7
+landfractype = uniform
+# used if landfractype is uniform
+landfrac = 0.7
 # Obliquity, deg, 0 <= δ <= 180
 obliquity = 23.5
 
